# OpenGL-MathLib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IntVectors.hpp  Math.hpp  Matrices.hpp  Operations.hpp  Quaternions.hpp  Vector2.hpp  Vectors.hpp
include/Math/: Angle.hpp  Concepts.hpp  MathInternal.hpp  Mathf.hpp  Matrix4x4.hpp  Operations.hpp  Quaternion.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp
include/Math/IntVectors/: IntVector2.hpp  IntVector2.inl  IntVector3.hpp  IntVector3.inl
include/Math/Matrices/: Matrix2x2.hpp  Matrix2x2.inl  Matrix3x3.hpp  Matrix3x3.inl  Matrix4x4.hpp  Matrix4x4.inl
include/Math/Quaternions/: DualQuaternion.hpp  DualQuaternion.inl  Quaternion.hpp  Quaternion.inl
include/Math/Vectors/: Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
src/: Vector2.cpp
src/Math/: Vector3.cpp
